wacc/test/golden/syntaxErr.array.arrayExpr
# array literals are not first-class expressions

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int[] b = [1, 2, 3] ++ [4] ;
	println b[3]
end


In test/wacc_examples/invalid/syntaxErr/array/arrayExpr.wacc (line 12, column 23):
unexpected operator +
expected ";" or end

> begin
>   int[] b = [1, 2, 3] ++ [4] ;
>                       ^
> 	println b[3]

